crates/tui/src/view/snapshots/tui__view__request__tests__alert_with_stripe_and_edges.snap
---
source: crates/tui/src/view/request_tests.rs
expression: shown
---








▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ the reviewer escalated
▌ allow once · deny
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
