crates/tui/src/view/snapshots/tui__view__request__tests__approval_with_stripe_and_edges.snap
---
source: crates/tui/src/view/request_tests.rs
expression: shown
---








▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ approve shell echo hi?
▌ allow once · for this session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
