crates/tui/src/view/snapshots/tui__view__request__tests__form_last_question_reads_review.snap
---
source: crates/tui/src/view/request_tests.rs
expression: "screen(&app, 60, 12).0"
---




▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question · s_aaaaaaaaaaaaaaaa · 1 of 1
  Base  [Name]  Submit
  What name?
  › ✎ answer in words
    Review →
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
