crates/tui/src/view/snapshots/tui__view__request__tests__form_scrolled_back_to_the_top_at_40x10.snap
---
source: crates/tui/src/view/request_tests.rs
expression: shown
---
question · s_aaaaaaaaaaaaaaaa · 1 of 1
[Pick]  Submit
Which one?
› ( ) one · a description long enough to
wrap at forty columns
  ( ) two · a description long enough to
wrap at forty columns
  ( ) three · a description long enough
to wrap at forty columns
  ( ) four · a description long enough
