crates/tui/src/view/snapshots/tui__view__request__tests__form_scrolled_to_the_cursor_at_40x10.snap
---
source: crates/tui/src/view/request_tests.rs
expression: shown
---
  to wrap at forty columns
    ( ) two · a description long enough
  to wrap at forty columns
    ( ) three · a description long
  enough to wrap at forty columns
    ( ) four · a description long enough
  to wrap at forty columns
    ✎ answer in words
    Review →
  › Chat about this
