crates/tui/src/view/snapshots/tui__view__request__tests__form_submit_tab_with_answers_skipped_and_note.snap
---
source: crates/tui/src/view/request_tests.rs
expression: "screen(&app, 60, 12).0"
---



▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question · s_aaaaaaaaaaaaaaaa · 1 of 1
  Base ✓  Name  [Submit]
  Base: main (Recommended), dev, "and tags"
  Name: skipped
  › note: "by friday"
    Submit
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
