crates/tui/src/view/snapshots/tui__view__request__tests__form_two_of_two_behind_an_approval.snap
---
source: crates/tui/src/view/request_tests.rs
expression: "screen(&app, 60, 12).0"
---


▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question · s_aaaaaaaaaaaaaaaa · 2 of 2
  [Base]  Name  Submit
  Which branch?
  › ( ) main (Recommended) · the default
    ( ) dev
    ✎ answer in words
    Next →
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
