crates/tui/src/view/snapshots/tui__view__request__tests__form_words_row_scrolled_to_the_caret_at_30x12.snap
---
source: crates/tui/src/view/request_tests.rs
expression: shown
---



▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question ·
  s_aaaaaaaaaaaaaaaa · 1 of 1
  Base  [Name ✓]  Submit
  What name?
  › ✎ uns past thirty columns
    Review →
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
