crates/tui/src/view/snapshots/tui__view__request__tests__one_question_confirm.snap
---
source: crates/tui/src/view/request_tests.rs
expression: "screen(&confirm, 60, 12).0"
---





▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question · s_aaaaaaaaaaaaaaaa · 1 of 1
  Continue?
  › ( ) yes
    ( ) no
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
