crates/tui/src/view/snapshots/tui__view__request__tests__one_question_multi_select_with_one_toggled.snap
---
source: crates/tui/src/view/request_tests.rs
expression: "screen(&multi, 60, 12).0"
---



▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question · s_aaaaaaaaaaaaaaaa · 1 of 1
  Pick some?
  › [x] alpha
    [ ] beta
    [ ] gamma
    Submit
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
